test_data/invalid/2.1_floating_brick.ldr
0 Floating brick
1 4 0 -100 0 1 0 0 0 1 0 0 0 1 3001.dat